src/objects/ExecSec_Approval_Step_Override_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <label>Approval Step</label>
        <referenceTo>Approval_Step__c</referenceTo>
        <relationshipLabel>ExecSec Approval Step Override Requests</relationshipLabel>
        <relationshipName>ExecSec_Approval_Step_Override_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overridden_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user making the approval step override (reassignment) request</description>
        <label>Overridden  By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ExecSec_Approval_Step_Override_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Date__c</fullName>
        <description>Timestamp for when the recall is executed by the batch process.  The delta between this number and the Create Date represents the batch request turn-around time.</description>
        <label>Override Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The Status of the Batch request.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Item_Id__c</fullName>
        <label>Work Item Id</label>
        <type>TextArea</type>
    </fields>
    <label>ExecSec Approval Step Override Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approval_Step__c</columns>
        <columns>Exception__c</columns>
        <columns>Overridden_By__c</columns>
        <columns>Override_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Work_Item_Id__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EASOR-{0000000}</displayFormat>
        <label>ExecSec Approval Step Override Request N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExecSec Approval Step Override Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>